--- a/SahlhaApp/appsettings.json
+++ b/SahlhaApp/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=SahlhaAppDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+
+  "Jwt": {
+    "Issuer": "https://localhost",
+    "Audience": "https://localhost:7166/webportal",
+    "Lifetime": 30,
+    "SigninKey": "49bfe4661d3f41ffaaa43c4f6962a6b7"
+  }
 }
