--- a/SahlhaApp/SahlhaApp.csproj
+++ b/SahlhaApp/SahlhaApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -6,8 +6,36 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Mapster" Version="7.4.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.4" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.4" />
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.4" />
+		<PackageReference Include="Scalar.AspNetCore" Version="2.1.16" />
+		<PackageReference Include="Stripe.net" Version="48.0.2" />
+	</ItemGroup>
+
+
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
+    <Folder Include="Areas\Admin\Controllers\" />
+    <Folder Include="Areas\Admin\" />
+    <Folder Include="Areas\Customer\Controllers\" />
+    <Folder Include="Areas\Identity\" />
+    <Folder Include="Areas\Provider\Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SahlhaApp.DataAccess\SahlhaApp.DataAccess.csproj" />
+    <ProjectReference Include="..\SahlhaApp.Models\SahlhaApp.Models.csproj" />
+    <ProjectReference Include="..\SahlhaApp.Utility\SahlhaApp.Utility.csproj" />
   </ItemGroup>
 
 </Project>
