--- a/SahlhaApp/Properties/launchSettings.json
+++ b/SahlhaApp/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "http": {
         "commandName": "Project",
         "dotnetRunMessages": true,
-        "launchBrowser": false,
+        "launchBrowser": true,
         "launchUrl": "Scalar/v1",
         "applicationUrl": "http://localhost:5234",
         "environmentVariables": {
@@ -14,9 +14,9 @@
     "https": {
         "commandName": "Project",
         "dotnetRunMessages": true,
-        "launchBrowser": false,
+        "launchBrowser": true,
         "launchUrl": "Scalar/v1",
-        "applicationUrl": "https://localhost:7289;http://localhost:5234",
+        "applicationUrl": "https://localhost:7289",
         "environmentVariables": {
             "ASPNETCORE_ENVIRONMENT": "Development"
         }
