--- a/SahlhaApp/SahlhaApp.csproj
+++ b/SahlhaApp/SahlhaApp.csproj
@@ -6,6 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Areas\Admin\**" />
+    <Content Remove="Areas\Admin\**" />
+    <EmbeddedResource Remove="Areas\Admin\**" />
+    <None Remove="Areas\Admin\**" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Mapster" Version="7.4.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.4" />
@@ -22,13 +29,6 @@
 		<PackageReference Include="Scalar.AspNetCore" Version="2.1.16" />
 		<PackageReference Include="Stripe.net" Version="48.0.2" />
 	</ItemGroup>
-
-
-
-  <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
-    <Folder Include="Areas\Admin\" />
-  </ItemGroup>
 
 
 
