--- a/SahlhaApp/Properties/launchSettings.json
+++ b/SahlhaApp/Properties/launchSettings.json
@@ -6,7 +6,7 @@
         "dotnetRunMessages": true,
         "launchBrowser": false,
         "launchUrl": "Scalar/v1",
-        "applicationUrl": "https://localhost:5234",
+        "applicationUrl": "http://localhost:5234",
         "environmentVariables": {
             "ASPNETCORE_ENVIRONMENT": "Development"
         }
